--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,6 @@ header
   display:flex;
   margin: 0 20px;
   padding-right: 16px;
-  align-items: center;
   position: fixed;
 }
 .style
@@ -27,24 +26,33 @@ header
   padding: 100px 500px;
   }
 #nav {
-  display: inline-block;
-  margin-left: 0px;
+  padding-top: 70px;
+  padding-left: 230px;
+  display:flex;
+  margin-right: 0px;
   list-style:none;
-  color: #76d6b5;
+  color: #a4d4ff;
 }
 #nav li {
   float:left;
 }
-#nav a {
-  display:block;
-  text-align:center;
-  width:150px;
-  text-decoration:none;
+a:link, a:visited {
+  display: flex;
+  text-align: left;
+  font-weight: bold;
+  font-size: 20px;
+  width: 100px;
+  text-decoration: none;
 }
-
+a:hover
+{
+  color: white;
+  background-color: #a4d4ff;
+}
 .punchline{
   color: #0d2d22;
   font-size: 35px;
+  width: 470px;
 }
 .line {}
 .direction {}
@@ -53,9 +61,9 @@ header
    width: 100%;
    height: 100%;
    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    display: block;
-    overflow-x: scroll;
+   background-size: 100% 100%;
+   display: block;
+   overflow-x: scroll;
    }
 .main-section
 {
